# MegaFlash

./: .gitattributes  .gitignore  LICENSE  README.md  SESSION_LOG.md
.cursor/rules/: session-log.mdc
common/: defines.h  defines.inc  megaflash_defines.inc
cpanel/: Makefile  README.md  apple2enh-bin.cfg  asm-conio.s  asm-megaflash.s  asm.h  asm.s  config.c  config.h  cpanel.as  defines.h  dialogs.c  dialogs.h  drivesenable.c  drivesenable.h  format.c  format.h  imagetransfer.c  imagetransfer.h  main.c  mainmenu.c  mainmenu.h  prodos19.dsk  testwifi.c  testwifi.h  textstrings.c  textstrings.h  tftp.c  tftp.h  timezone.c  timezone.h  ui-menu.c  ui-menu.h  ui-misc.c  ui-misc.h  ui-progressbar.c  ui-progressbar.h  ui-textinput.c  ui-textinput.h  ui-textinputbad.c  (+6 more)
docs/: C0x-register-comparison-Uthernet2-MegaFlash.md  FujiNet-network-stack-on-MegaFlash.md  Uthernet-II-emulation-on-MegaFlash.md
firmware/: Makefile  README.md  accel.s  bootmenu.s  buildflags.inc  defines.inc  dispatch.s  fpu.s  iic.cfg  iicplus.cfg  macros.inc  megaflash.s  merge_iic.cfg  merge_iic.s  merge_iicp.cfg  merge_iicp.s  patches.s  slotrom.s  smartport.s  version.txt
gal/: MEGAFLASH_GAL16.abs  MEGAFLASH_GAL16.doc  MEGAFLASH_GAL16.lst  MEGAFLASH_GAL16.sim  README.md  megaflash_gal16.jed  megaflash_gal16.pld  tmpcsim.im
kicad/: Level_Shifter.kicad_sym  README.md  fp-info-cache  fp-lib-table  megaflash.kicad_pcb  megaflash.kicad_prl  megaflash.kicad_pro  megaflash.kicad_sch
kicad/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
kicad/gerber/: megaflash-B_Cu.gbl  megaflash-B_Mask.gbs  megaflash-B_Silkscreen.gbo  megaflash-F_Mask.gts  megaflash-F_Silkscreen.gto  megaflash-NPTH-drl_map.gbr  megaflash-NPTH.drl  megaflash-PTH-drl_map.gbr  megaflash-PTH.drl
kicad/misc.pretty/: PinHeader_2x17_P2.54mm_Vertical_Mirror.kicad_mod
kicad/rev1.0/: MCU_RaspberryPi_and_Boards.kicad_sym  Memory_Winbond.kicad_sym  PLD.kicad_sym  (+4 more)
pico/: CMakeLists.txt  README.md  a2bus.c  a2bus.h  a2bus_rp2040.pio  a2bus_rp2350.pio  busloop.c  busloop.h  busloop_wa.c  busloop_wa.h  cmakeall.sh  cmdhandler.c  cmdhandler.h  cpanel.s  debug.h  defines.h  dmamemops.c  dmamemops.h  encryption.c  encryption.h  filetransfer.c  filetransfer.h  flash.c  flash.h  flashunitmapper.c  flashunitmapper.h  formatter.c  formatter.h  fpu.c  fpu.h  ipc.h  main.c  mediaaccess.c  mediaaccess.h  megaflash-pico.uf2  misc.c  misc.h  network.cpp  network.h  ntptask.cpp  (+36 more)
pico/_releases/MegaFlash1.0/: megaflash-pico2.uf2
(+26 files in other folders)
